[gd_scene load_steps=6 format=2]

[ext_resource path="res://main/Main.gd" type="Script" id=1]
[ext_resource path="res://model/model.glb" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://anti_specular_noise.gdshader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/enable = true
shader_param/debug_draw = false
shader_param/scan_level = 3
shader_param/luminance_threshold = 0.3
shader_param/noise_points_count_threshold = 30
shader_param/blur_count = 16

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ResultTexture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="ViewportSource" type="Viewport" parent="."]
msaa = 4
render_target_v_flip = true

[node name="DirectionalLight" type="DirectionalLight" parent="ViewportSource"]
transform = Transform( 0.364536, -0.762804, 0.534082, 0, 0.573548, 0.819172, -0.931189, -0.298618, 0.209079, 0, 0, 0 )
light_specular = 1.0

[node name="DirectionalLight2" type="DirectionalLight" parent="ViewportSource"]
transform = Transform( 0.887413, 0.377617, -0.264391, 0, 0.573548, 0.819172, 0.460974, -0.726944, 0.508974, 0, 0, 0 )
light_specular = 1.0

[node name="DirectionalLight3" type="DirectionalLight" parent="ViewportSource"]
transform = Transform( 0.866025, 2.18557e-08, 0.5, 0.5, -3.78552e-08, -0.866025, 0, 1, -4.37114e-08, 0, 0, 0 )
light_specular = 1.0

[node name="model" parent="ViewportSource" instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="ViewportSource"]
transform = Transform( 0.484703, -0.437339, 0.757494, 0, 0.866025, 0.5, -0.874679, -0.242351, 0.419765, 1.81581, 1.46807, 1.75306 )

[node name="ViewportAntiNoise" type="Viewport" parent="."]
usage = 0
render_target_v_flip = true

[node name="TextureShader" type="TextureRect" parent="ViewportAntiNoise"]
material = SubResource( 2 )
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -329.0
margin_top = -40.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 329.0
margin_bottom = 14.0
text = "Press ui_accept(Enter) to switch anti-specualr-noise"

[node name="LabelEnableShader" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 329.0
margin_bottom = 32.0
text = "Now:"
